--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rollup": "^1.9.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^4.2.4"
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-visualizer": "^3.2.1"
   }
 }
