[Desmos Fork] Lint separately for IE 11 and modern browser support
In our IE 11 lint configuration, we mark a number of ES language/library
features as being polyfilled (by core-js). Since we are bundling those
polyfills separately and only including that bundle in IE 11, this
commit adds another lint configuration that lints for support in modern
browsers (last 2 versions) *without* marking those ES features as
polyfilled.

--- a/fluent-bundle/makefile
+++ b/fluent-bundle/makefile
@@ -15,7 +15,9 @@ index.js: $(SOURCES)
 	@echo -e " $(OK) $@ built"
 
 compat.js: $(SOURCES)
-	@eslint --no-eslintrc --config eslint_compat.js --max-warnings 0 src
+	@eslint --no-eslintrc --config eslint_compat_ie11.js --max-warnings 0 src
+	@eslint --no-eslintrc --config eslint_compat_modern.js --max-warnings 0 src
+
 	@rollup \
 	    --config compat_config.js \
 	    --banner "/* $(PACKAGE)@$(VERSION) */" \
