--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-eslint": "^10.0.1",
     "colors": "^1.3.3",
     "commander": "^2.20",
-    "core-js": "^3.4.0",
+    "core-js": "~3.4.8",
     "esdoc": "^1.1.0",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-jsx-plugin": "^1.0.0",
